# Autonomous_Dev_Agent

./: .gitignore  LICENSE  Makefile  README.md  index.html  pyproject.toml  requirements.txt  streamlit_app.py  test_system.py
.github/workflows/: ci.yml
autonomous_dev_agent/: README.md  __init__.py  requirements.txt  setup.sh
autonomous_dev_agent/src/: main.py
autonomous_dev_agent/src/agents/: base_agent.py  coding_agent.py  debugging_agent.py  documentation_agent.py  planning_agent.py  testing_agent.py
autonomous_dev_agent/src/api/: server.py
autonomous_dev_agent/src/config/: config.py
autonomous_dev_agent/src/models/: base_models.py
autonomous_dev_agent/src/rag/: __init__.py  ingest.py
autonomous_dev_agent/src/ui/: __init__.py  app.py  main_app.py
autonomous_dev_agent/src/utils/: interactive_learning.py  llm_utils.py  version_control.py
autonomous_dev_agent/src/workflows/: development_workflow.py  enhanced_workflow.py
tests/: test_models.py
