[project]
name = "autonomous-dev-agent"
version = "0.1.0"
description = "Autonomous Software Development Agent (LangGraph multi-agent pipeline)"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q --maxfail=1 --disable-warnings"



